Use YAML file for notebook parameters

--- a/02-create_probability_maps.ipynb
+++ b/02-create_probability_maps.ipynb
@@ -6,10 +6,10 @@
    "id": "80263a75",
    "metadata": {
     "papermill": {
-     "duration": 0.002971,
-     "end_time": "2024-08-28T10:12:17.545556",
+     "duration": 0.00359,
+     "end_time": "2024-09-30T07:41:29.074562",
      "exception": false,
-     "start_time": "2024-08-28T10:12:17.542585",
+     "start_time": "2024-09-30T07:41:29.070972",
      "status": "completed"
     },
     "tags": []
@@ -25,10 +25,10 @@
    "id": "36e80d65",
    "metadata": {
     "papermill": {
-     "duration": 0.002443,
-     "end_time": "2024-08-28T10:12:17.550663",
+     "duration": 0.003178,
+     "end_time": "2024-09-30T07:41:29.080476",
      "exception": false,
-     "start_time": "2024-08-28T10:12:17.548220",
+     "start_time": "2024-09-30T07:41:29.077298",
      "status": "completed"
     },
     "tags": []
@@ -42,133 +42,44 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9057911b",
+   "id": "8df5ad8b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-28T10:12:17.556525Z",
-     "iopub.status.busy": "2024-08-28T10:12:17.556236Z",
-     "iopub.status.idle": "2024-08-28T10:12:17.562138Z",
-     "shell.execute_reply": "2024-08-28T10:12:17.561718Z"
+     "iopub.execute_input": "2024-09-30T07:41:29.086305Z",
+     "iopub.status.busy": "2024-09-30T07:41:29.086033Z",
+     "iopub.status.idle": "2024-09-30T07:41:29.129923Z",
+     "shell.execute_reply": "2024-09-30T07:41:29.129300Z"
     },
     "papermill": {
-     "duration": 0.010427,
-     "end_time": "2024-08-28T10:12:17.563471",
+     "duration": 0.049039,
+     "end_time": "2024-09-30T07:41:29.131819",
      "exception": false,
-     "start_time": "2024-08-28T10:12:17.553044",
+     "start_time": "2024-09-30T07:41:29.082780",
      "status": "completed"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
+    "from lib.load_params import get_params\n",
+    "\n",
+    "params = get_params(notebook=\"02\")\n",
+    "\n",
     "# If True, use training data extracted in notebook 00c\n",
     "# Else, use pre-prepared training data downloaded from Zenodo\n",
-    "use_extracted_data = True\n",
+    "use_extracted_data = params[\"use_extracted_data\"]\n",
     "\n",
     "# Number of processes to use\n",
-    "n_jobs = 4\n",
+    "n_jobs = params[\"n_jobs\"]\n",
     "\n",
     "# Overwrite any existing output files\n",
-    "overwrite = True\n",
+    "overwrite = params[\"overwrite_output\"]\n",
     "\n",
     "# Control verbosity level of logging output\n",
-    "verbose = True"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6bcc106f",
-   "metadata": {
-    "papermill": {
-     "duration": 0.002154,
-     "end_time": "2024-08-28T10:12:17.567941",
-     "exception": false,
-     "start_time": "2024-08-28T10:12:17.565787",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "These values will usually not need to be modified:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "40a511d9",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-08-28T10:12:17.573337Z",
-     "iopub.status.busy": "2024-08-28T10:12:17.573113Z",
-     "iopub.status.idle": "2024-08-28T10:12:17.622846Z",
-     "shell.execute_reply": "2024-08-28T10:12:17.622272Z"
-    },
-    "papermill": {
-     "duration": 0.054555,
-     "end_time": "2024-08-28T10:12:17.624589",
-     "exception": false,
-     "start_time": "2024-08-28T10:12:17.570034",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import os\n",
+    "verbose = params[\"verbose\"]\n",
     "\n",
-    "from lib.check_files import check_prepared_data\n",
-    "\n",
-    "if use_extracted_data:\n",
-    "    data_dir = \"extracted_data\"\n",
-    "else:\n",
-    "    data_dir = check_prepared_data(\"prepared_data\", verbose=True)\n",
-    "\n",
-    "output_dir = \"outputs\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2efa9d67",
-   "metadata": {
-    "papermill": {
-     "duration": 0.001977,
-     "end_time": "2024-08-28T10:12:17.628770",
-     "exception": false,
-     "start_time": "2024-08-28T10:12:17.626793",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "If any of the following exist as environment variables, they will replace the values defined above:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "f2d69c31",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-08-28T10:12:17.633754Z",
-     "iopub.status.busy": "2024-08-28T10:12:17.633574Z",
-     "iopub.status.idle": "2024-08-28T10:12:17.637887Z",
-     "shell.execute_reply": "2024-08-28T10:12:17.636589Z"
-    },
-    "papermill": {
-     "duration": 0.009339,
-     "end_time": "2024-08-28T10:12:17.640229",
-     "exception": false,
-     "start_time": "2024-08-28T10:12:17.630890",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "n_jobs = int(os.environ.get(\"N_JOBS\", n_jobs))\n",
-    "overwrite = bool(int(os.environ.get(\"OVERWRITE\", overwrite)))\n",
-    "verbose = bool(int(os.environ.get(\"VERBOSE\", verbose)))\n",
-    "output_dir = os.environ.get(\"OUTPUT_DIR\", output_dir)"
+    "# Output directory\n",
+    "output_dir = params[\"output_dir\"]"
    ]
   },
   {
@@ -176,10 +87,10 @@
    "id": "544fcfcf",
    "metadata": {
     "papermill": {
-     "duration": 0.002727,
-     "end_time": "2024-08-28T10:12:17.645514",
+     "duration": 0.00237,
+     "end_time": "2024-09-30T07:41:29.136590",
      "exception": false,
-     "start_time": "2024-08-28T10:12:17.642787",
+     "start_time": "2024-09-30T07:41:29.134220",
      "status": "completed"
     },
     "tags": []
@@ -195,10 +106,10 @@
    "id": "dca6800a",
    "metadata": {
     "papermill": {
-     "duration": 0.003282,
-     "end_time": "2024-08-28T10:12:17.651945",
+     "duration": 0.002314,
+     "end_time": "2024-09-30T07:41:29.141353",
      "exception": false,
-     "start_time": "2024-08-28T10:12:17.648663",
+     "start_time": "2024-09-30T07:41:29.139039",
      "status": "completed"
     },
     "tags": []
@@ -209,26 +120,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "5303979d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-28T10:12:17.657283Z",
-     "iopub.status.busy": "2024-08-28T10:12:17.657089Z",
-     "iopub.status.idle": "2024-08-28T10:12:21.599042Z",
-     "shell.execute_reply": "2024-08-28T10:12:21.598402Z"
+     "iopub.execute_input": "2024-09-30T07:41:29.147066Z",
+     "iopub.status.busy": "2024-09-30T07:41:29.146815Z",
+     "iopub.status.idle": "2024-09-30T07:41:36.117312Z",
+     "shell.execute_reply": "2024-09-30T07:41:36.116736Z"
     },
     "papermill": {
-     "duration": 3.946357,
-     "end_time": "2024-08-28T10:12:21.600572",
+     "duration": 6.975491,
+     "end_time": "2024-09-30T07:41:36.119146",
      "exception": false,
-     "start_time": "2024-08-28T10:12:17.654215",
+     "start_time": "2024-09-30T07:41:29.143655",
      "status": "completed"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
+    "import os\n",
     "import time\n",
     "from datetime import timedelta\n",
     "\n",
@@ -237,6 +149,7 @@
     "from dask_ml.wrappers import ParallelPostFit\n",
     "from joblib import load\n",
     "\n",
+    "from lib.check_files import check_prepared_data\n",
     "from lib.pu import create_probability_grids"
    ]
   },
@@ -245,10 +158,10 @@
    "id": "ae9cc890",
    "metadata": {
     "papermill": {
-     "duration": 0.002058,
-     "end_time": "2024-08-28T10:12:21.604938",
+     "duration": 0.002307,
+     "end_time": "2024-09-30T07:41:36.124199",
      "exception": false,
-     "start_time": "2024-08-28T10:12:21.602880",
+     "start_time": "2024-09-30T07:41:36.121892",
      "status": "completed"
     },
     "tags": []
@@ -259,20 +172,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "7342050e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-28T10:12:21.610524Z",
-     "iopub.status.busy": "2024-08-28T10:12:21.610142Z",
-     "iopub.status.idle": "2024-08-28T10:12:21.616261Z",
-     "shell.execute_reply": "2024-08-28T10:12:21.615803Z"
+     "iopub.execute_input": "2024-09-30T07:41:36.130801Z",
+     "iopub.status.busy": "2024-09-30T07:41:36.130331Z",
+     "iopub.status.idle": "2024-09-30T07:41:36.137636Z",
+     "shell.execute_reply": "2024-09-30T07:41:36.136819Z"
     },
     "papermill": {
-     "duration": 0.010602,
-     "end_time": "2024-08-28T10:12:21.617617",
+     "duration": 0.012606,
+     "end_time": "2024-09-30T07:41:36.139478",
      "exception": false,
-     "start_time": "2024-08-28T10:12:21.607015",
+     "start_time": "2024-09-30T07:41:36.126872",
      "status": "completed"
     },
     "tags": []
@@ -281,10 +194,10 @@
     {
      "data": {
       "text/plain": [
-       "<dask.config.set at 0x1813e9810>"
+       "<dask.config.set at 0x1798bfa10>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,10 +212,10 @@
    "id": "632c1c44",
    "metadata": {
     "papermill": {
-     "duration": 0.002243,
-     "end_time": "2024-08-28T10:12:21.622093",
+     "duration": 0.002775,
+     "end_time": "2024-09-30T07:41:36.144794",
      "exception": false,
-     "start_time": "2024-08-28T10:12:21.619850",
+     "start_time": "2024-09-30T07:41:36.142019",
      "status": "completed"
     },
     "tags": []
@@ -313,26 +226,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "f01bd62d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-28T10:12:21.627314Z",
-     "iopub.status.busy": "2024-08-28T10:12:21.627134Z",
-     "iopub.status.idle": "2024-08-28T10:12:27.710453Z",
-     "shell.execute_reply": "2024-08-28T10:12:27.709743Z"
+     "iopub.execute_input": "2024-09-30T07:41:36.150861Z",
+     "iopub.status.busy": "2024-09-30T07:41:36.150616Z",
+     "iopub.status.idle": "2024-09-30T07:41:45.354012Z",
+     "shell.execute_reply": "2024-09-30T07:41:45.353514Z"
     },
     "papermill": {
-     "duration": 6.08774,
-     "end_time": "2024-08-28T10:12:27.712122",
+     "duration": 9.208612,
+     "end_time": "2024-09-30T07:41:45.355825",
      "exception": false,
-     "start_time": "2024-08-28T10:12:21.624382",
+     "start_time": "2024-09-30T07:41:36.147213",
      "status": "completed"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
+    "if use_extracted_data:\n",
+    "    data_dir = \"extracted_data\"\n",
+    "else:\n",
+    "    data_dir = check_prepared_data(\"prepared_data\", verbose=True)\n",
+    "\n",
     "columns = [\n",
     "    \"lon\",\n",
     "    \"lat\",\n",
@@ -359,10 +277,10 @@
    "id": "dc314a0d",
    "metadata": {
     "papermill": {
-     "duration": 0.002675,
-     "end_time": "2024-08-28T10:12:27.717870",
+     "duration": 0.002342,
+     "end_time": "2024-09-30T07:41:45.360877",
      "exception": false,
-     "start_time": "2024-08-28T10:12:27.715195",
+     "start_time": "2024-09-30T07:41:45.358535",
      "status": "completed"
     },
     "tags": []
@@ -375,82 +293,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "5ac247e1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-28T10:12:27.724898Z",
-     "iopub.status.busy": "2024-08-28T10:12:27.724642Z",
-     "iopub.status.idle": "2024-08-28T10:22:03.804074Z",
-     "shell.execute_reply": "2024-08-28T10:22:03.803466Z"
+     "iopub.execute_input": "2024-09-30T07:41:45.366734Z",
+     "iopub.status.busy": "2024-09-30T07:41:45.366487Z",
+     "iopub.status.idle": "2024-09-30T07:54:51.633174Z",
+     "shell.execute_reply": "2024-09-30T07:54:51.632527Z"
     },
     "papermill": {
-     "duration": 576.087394,
-     "end_time": "2024-08-28T10:22:03.808017",
+     "duration": 786.271774,
+     "end_time": "2024-09-30T07:54:51.634942",
      "exception": false,
-     "start_time": "2024-08-28T10:12:27.720623",
+     "start_time": "2024-09-30T07:41:45.363168",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Calculating probabilities for PU model complete (region: global; duration: 0:01:36.948725)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Calculating probabilities for PU model complete (region: North America; duration: 0:01:30.483395)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Calculating probabilities for PU model complete (region: South America; duration: 0:01:26.198883)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Calculating probabilities for PU model complete (region: Southeast Asia; duration: 0:01:30.402295)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Calculating probabilities for PU model complete (region: Tethys; duration: 0:01:27.258890)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Calculating probabilities for SVM model complete (region: global; duration: 0:00:44.824948)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Calculating probabilities for SVM model complete (region: North America; duration: 0:00:32.083647)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Calculating probabilities for SVM model complete (region: South America; duration: 0:00:47.867588)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for algorithm in (\"PU\", \"SVM\"):\n",
     "    t0 = time.time()\n",
@@ -529,10 +390,10 @@
    "id": "e94d2cc2",
    "metadata": {
     "papermill": {
-     "duration": 0.002995,
-     "end_time": "2024-08-28T10:22:03.814096",
+     "duration": 0.002396,
+     "end_time": "2024-09-30T07:54:51.640063",
      "exception": false,
-     "start_time": "2024-08-28T10:22:03.811101",
+     "start_time": "2024-09-30T07:54:51.637667",
      "status": "completed"
     },
     "tags": []
@@ -545,82 +406,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "23b349d7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-28T10:22:03.820998Z",
-     "iopub.status.busy": "2024-08-28T10:22:03.820774Z",
-     "iopub.status.idle": "2024-08-28T16:13:21.367846Z",
-     "shell.execute_reply": "2024-08-28T16:13:21.365046Z"
+     "iopub.execute_input": "2024-09-30T07:54:51.646230Z",
+     "iopub.status.busy": "2024-09-30T07:54:51.645977Z",
+     "iopub.status.idle": "2024-09-30T08:59:36.128231Z",
+     "shell.execute_reply": "2024-09-30T08:59:36.127295Z"
     },
     "papermill": {
-     "duration": 21077.572361,
-     "end_time": "2024-08-28T16:13:21.389391",
+     "duration": 3884.48799,
+     "end_time": "2024-09-30T08:59:36.130465",
      "exception": false,
-     "start_time": "2024-08-28T10:22:03.817030",
+     "start_time": "2024-09-30T07:54:51.642475",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating grids for PU model complete (region: global; duration: 0:12:45.591400)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating grids for PU model complete (region: North America; duration: 0:12:39.979137)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating grids for PU model complete (region: South America; duration: 0:12:41.547800)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating grids for PU model complete (region: Southeast Asia; duration: 0:12:43.957705)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating grids for PU model complete (region: Tethys; duration: 1:32:57.268913)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating grids for SVM model complete (region: global; duration: 0:55:32.882253)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating grids for SVM model complete (region: North America; duration: 1:28:08.052080)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating grids for SVM model complete (region: South America; duration: 1:03:48.248376)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for algorithm in (\"PU\", \"SVM\"):\n",
     "    t0 = time.time()\n",
@@ -686,10 +490,10 @@
    "id": "d779a208",
    "metadata": {
     "papermill": {
-     "duration": 0.016219,
-     "end_time": "2024-08-28T16:13:21.421602",
+     "duration": 0.002955,
+     "end_time": "2024-09-30T08:59:36.140018",
      "exception": false,
-     "start_time": "2024-08-28T16:13:21.405383",
+     "start_time": "2024-09-30T08:59:36.137063",
      "status": "completed"
     },
     "tags": []
@@ -718,14 +522,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 21668.15692,
-   "end_time": "2024-08-28T16:13:24.686746",
+   "duration": 4690.973218,
+   "end_time": "2024-09-30T08:59:38.970471",
    "environment_variables": {},
    "exception": null,
-   "input_path": "02-create_probability_maps.ipynb",
-   "output_path": "02-create_probability_maps.ipynb",
+   "input_path": "02-create_probability_maps copy.ipynb",
+   "output_path": "02-create_probability_maps copy.ipynb",
    "parameters": {},
-   "start_time": "2024-08-28T10:12:16.529826",
+   "start_time": "2024-09-30T07:41:27.997253",
    "version": "2.4.0"
   }
  },
