--- a/05-create_preservation_maps.ipynb
+++ b/05-create_preservation_maps.ipynb
@@ -5,10 +5,10 @@
    "id": "7f6878b3",
    "metadata": {
     "papermill": {
-     "duration": 0.005005,
-     "end_time": "2024-08-29T01:32:05.433827",
+     "duration": 0.003509,
+     "end_time": "2024-10-01T06:41:57.037664",
      "exception": false,
-     "start_time": "2024-08-29T01:32:05.428822",
+     "start_time": "2024-10-01T06:41:57.034155",
      "status": "completed"
     },
     "tags": []
@@ -26,10 +26,10 @@
    "id": "bb19728e",
    "metadata": {
     "papermill": {
-     "duration": 0.003232,
-     "end_time": "2024-08-29T01:32:05.440146",
+     "duration": 0.002149,
+     "end_time": "2024-10-01T06:41:57.042653",
      "exception": false,
-     "start_time": "2024-08-29T01:32:05.436914",
+     "start_time": "2024-10-01T06:41:57.040504",
      "status": "completed"
     },
     "tags": []
@@ -43,128 +43,41 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5575cb58",
+   "id": "b8959940",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-29T01:32:05.446597Z",
-     "iopub.status.busy": "2024-08-29T01:32:05.446258Z",
-     "iopub.status.idle": "2024-08-29T01:32:05.455461Z",
-     "shell.execute_reply": "2024-08-29T01:32:05.454328Z"
+     "iopub.execute_input": "2024-10-01T06:41:57.048531Z",
+     "iopub.status.busy": "2024-10-01T06:41:57.048252Z",
+     "iopub.status.idle": "2024-10-01T06:41:57.098844Z",
+     "shell.execute_reply": "2024-10-01T06:41:57.098281Z"
     },
     "papermill": {
-     "duration": 0.014565,
-     "end_time": "2024-08-29T01:32:05.457494",
+     "duration": 0.055694,
+     "end_time": "2024-10-01T06:41:57.100759",
      "exception": false,
-     "start_time": "2024-08-29T01:32:05.442929",
+     "start_time": "2024-10-01T06:41:57.045065",
      "status": "completed"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
+    "from lib.load_params import get_params\n",
+    "\n",
+    "params = get_params(notebook=\"05\")\n",
+    "\n",
     "# If True, use training data extracted in notebook 00c\n",
     "# Else, use pre-prepared training data downloaded from Zenodo\n",
-    "use_extracted_data = True\n",
+    "use_extracted_data = params[\"use_extracted_data\"]\n",
     "\n",
     "# Number of processes to use\n",
-    "n_jobs = 4\n",
+    "n_jobs = params[\"n_jobs\"]\n",
     "\n",
     "# Control verbosity level of logging output\n",
-    "verbose = False"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e027d1c4",
-   "metadata": {
-    "papermill": {
-     "duration": 0.004949,
-     "end_time": "2024-08-29T01:32:05.464935",
-     "exception": false,
-     "start_time": "2024-08-29T01:32:05.459986",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "These values will usually not need to be modified:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "790680ec",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-08-29T01:32:05.471127Z",
-     "iopub.status.busy": "2024-08-29T01:32:05.470911Z",
-     "iopub.status.idle": "2024-08-29T01:32:05.537690Z",
-     "shell.execute_reply": "2024-08-29T01:32:05.537160Z"
-    },
-    "papermill": {
-     "duration": 0.071963,
-     "end_time": "2024-08-29T01:32:05.539576",
-     "exception": false,
-     "start_time": "2024-08-29T01:32:05.467613",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "from lib.check_files import check_prepared_data\n",
+    "verbose = params[\"verbose\"]\n",
     "\n",
-    "if use_extracted_data:\n",
-    "    data_dir = \"extracted_data\"\n",
-    "else:\n",
-    "    data_dir = check_prepared_data(\"prepared_data\")\n",
-    "\n",
-    "outputs_dir = \"outputs\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "adb0c6c1",
-   "metadata": {
-    "papermill": {
-     "duration": 0.002515,
-     "end_time": "2024-08-29T01:32:05.545371",
-     "exception": false,
-     "start_time": "2024-08-29T01:32:05.542856",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "If any of the following exist as environment variables, they will replace the values defined above:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "af58fc81",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-08-29T01:32:05.551491Z",
-     "iopub.status.busy": "2024-08-29T01:32:05.551231Z",
-     "iopub.status.idle": "2024-08-29T01:32:05.554347Z",
-     "shell.execute_reply": "2024-08-29T01:32:05.553796Z"
-    },
-    "papermill": {
-     "duration": 0.008131,
-     "end_time": "2024-08-29T01:32:05.555968",
-     "exception": false,
-     "start_time": "2024-08-29T01:32:05.547837",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "\n",
-    "n_jobs = int(os.environ.get(\"N_JOBS\", n_jobs))\n",
-    "verbose = bool(int(os.environ.get(\"VERBOSE\", verbose)))"
+    "# Output directory\n",
+    "outputs_dir = params[\"output_dir\"]"
    ]
   },
   {
@@ -172,10 +85,10 @@
    "id": "732a5a55",
    "metadata": {
     "papermill": {
-     "duration": 0.002482,
-     "end_time": "2024-08-29T01:32:05.561032",
+     "duration": 0.002382,
+     "end_time": "2024-10-01T06:41:57.105676",
      "exception": false,
-     "start_time": "2024-08-29T01:32:05.558550",
+     "start_time": "2024-10-01T06:41:57.103294",
      "status": "completed"
     },
     "tags": []
@@ -191,10 +104,10 @@
    "id": "1d5bf441",
    "metadata": {
     "papermill": {
-     "duration": 0.002174,
-     "end_time": "2024-08-29T01:32:05.566322",
+     "duration": 0.002614,
+     "end_time": "2024-10-01T06:41:57.110487",
      "exception": false,
-     "start_time": "2024-08-29T01:32:05.564148",
+     "start_time": "2024-10-01T06:41:57.107873",
      "status": "completed"
     },
     "tags": []
@@ -205,20 +118,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "831e9f22",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-29T01:32:05.571890Z",
-     "iopub.status.busy": "2024-08-29T01:32:05.571688Z",
-     "iopub.status.idle": "2024-08-29T01:32:09.274613Z",
-     "shell.execute_reply": "2024-08-29T01:32:09.274056Z"
+     "iopub.execute_input": "2024-10-01T06:41:57.116419Z",
+     "iopub.status.busy": "2024-10-01T06:41:57.116163Z",
+     "iopub.status.idle": "2024-10-01T06:42:02.153424Z",
+     "shell.execute_reply": "2024-10-01T06:42:02.152834Z"
     },
     "papermill": {
-     "duration": 3.707735,
-     "end_time": "2024-08-29T01:32:09.276374",
+     "duration": 5.042394,
+     "end_time": "2024-10-01T06:42:02.155428",
      "exception": false,
-     "start_time": "2024-08-29T01:32:05.568639",
+     "start_time": "2024-10-01T06:41:57.113034",
      "status": "completed"
     },
     "tags": []
@@ -226,12 +139,14 @@
    "outputs": [],
    "source": [
     "import glob\n",
+    "import os\n",
     "\n",
     "import joblib\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from gplately import Raster\n",
     "\n",
+    "from lib.check_files import check_prepared_data\n",
     "from lib.pu import create_grids"
    ]
   },
@@ -240,10 +155,10 @@
    "id": "bbbd06d1",
    "metadata": {
     "papermill": {
-     "duration": 0.002673,
-     "end_time": "2024-08-29T01:32:09.282043",
+     "duration": 0.002647,
+     "end_time": "2024-10-01T06:42:02.160697",
      "exception": false,
-     "start_time": "2024-08-29T01:32:09.279370",
+     "start_time": "2024-10-01T06:42:02.158050",
      "status": "completed"
     },
     "tags": []
@@ -254,26 +169,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "0ebbda50",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-29T01:32:09.288455Z",
-     "iopub.status.busy": "2024-08-29T01:32:09.288044Z",
-     "iopub.status.idle": "2024-08-29T01:32:09.292603Z",
-     "shell.execute_reply": "2024-08-29T01:32:09.291901Z"
+     "iopub.execute_input": "2024-10-01T06:42:02.167968Z",
+     "iopub.status.busy": "2024-10-01T06:42:02.167127Z",
+     "iopub.status.idle": "2024-10-01T06:42:02.172963Z",
+     "shell.execute_reply": "2024-10-01T06:42:02.172340Z"
     },
     "papermill": {
-     "duration": 0.009552,
-     "end_time": "2024-08-29T01:32:09.294167",
+     "duration": 0.011515,
+     "end_time": "2024-10-01T06:42:02.174586",
      "exception": false,
-     "start_time": "2024-08-29T01:32:09.284615",
+     "start_time": "2024-10-01T06:42:02.163071",
      "status": "completed"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
+    "if use_extracted_data:\n",
+    "    data_dir = \"extracted_data\"\n",
+    "else:\n",
+    "    data_dir = check_prepared_data(\"prepared_data\")\n",
+    "\n",
     "data_filename = os.path.join(data_dir, \"grid_data.csv\")\n",
     "\n",
     "dist_parametric_filename = os.path.join(\n",
@@ -309,10 +229,10 @@
    "id": "1782b6b5",
    "metadata": {
     "papermill": {
-     "duration": 0.002564,
-     "end_time": "2024-08-29T01:32:09.299393",
+     "duration": 0.003039,
+     "end_time": "2024-10-01T06:42:02.180031",
      "exception": false,
-     "start_time": "2024-08-29T01:32:09.296829",
+     "start_time": "2024-10-01T06:42:02.176992",
      "status": "completed"
     },
     "tags": []
@@ -325,20 +245,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "210df0fc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-29T01:32:09.305882Z",
-     "iopub.status.busy": "2024-08-29T01:32:09.305643Z",
-     "iopub.status.idle": "2024-08-29T01:32:37.927529Z",
-     "shell.execute_reply": "2024-08-29T01:32:37.926962Z"
+     "iopub.execute_input": "2024-10-01T06:42:02.185646Z",
+     "iopub.status.busy": "2024-10-01T06:42:02.185359Z",
+     "iopub.status.idle": "2024-10-01T06:42:33.614625Z",
+     "shell.execute_reply": "2024-10-01T06:42:33.613306Z"
     },
     "papermill": {
-     "duration": 28.627963,
-     "end_time": "2024-08-29T01:32:37.929930",
+     "duration": 31.434556,
+     "end_time": "2024-10-01T06:42:33.616836",
      "exception": false,
-     "start_time": "2024-08-29T01:32:09.301967",
+     "start_time": "2024-10-01T06:42:02.182280",
      "status": "completed"
     },
     "tags": []
@@ -364,10 +284,10 @@
    "id": "a27d57a0",
    "metadata": {
     "papermill": {
-     "duration": 0.004326,
-     "end_time": "2024-08-29T01:32:37.937892",
+     "duration": 0.002176,
+     "end_time": "2024-10-01T06:42:33.621591",
      "exception": false,
-     "start_time": "2024-08-29T01:32:37.933566",
+     "start_time": "2024-10-01T06:42:33.619415",
      "status": "completed"
     },
     "tags": []
@@ -383,10 +303,10 @@
    "id": "4fafad82",
    "metadata": {
     "papermill": {
-     "duration": 0.003193,
-     "end_time": "2024-08-29T01:32:37.944057",
+     "duration": 0.002057,
+     "end_time": "2024-10-01T06:42:33.626040",
      "exception": false,
-     "start_time": "2024-08-29T01:32:37.940864",
+     "start_time": "2024-10-01T06:42:33.623983",
      "status": "completed"
     },
     "tags": []
@@ -397,20 +317,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "bf0773e0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-29T01:32:37.951222Z",
-     "iopub.status.busy": "2024-08-29T01:32:37.950945Z",
-     "iopub.status.idle": "2024-08-29T01:47:05.166506Z",
-     "shell.execute_reply": "2024-08-29T01:47:05.165784Z"
+     "iopub.execute_input": "2024-10-01T06:42:33.632730Z",
+     "iopub.status.busy": "2024-10-01T06:42:33.632355Z",
+     "iopub.status.idle": "2024-10-01T06:52:37.219702Z",
+     "shell.execute_reply": "2024-10-01T06:52:37.218966Z"
     },
     "papermill": {
-     "duration": 867.221412,
-     "end_time": "2024-08-29T01:47:05.168379",
+     "duration": 603.593451,
+     "end_time": "2024-10-01T06:52:37.221806",
      "exception": false,
-     "start_time": "2024-08-29T01:32:37.946967",
+     "start_time": "2024-10-01T06:42:33.628355",
      "status": "completed"
     },
     "tags": []
@@ -433,10 +353,10 @@
    "id": "eead1583",
    "metadata": {
     "papermill": {
-     "duration": 0.002612,
-     "end_time": "2024-08-29T01:47:05.175214",
+     "duration": 0.002344,
+     "end_time": "2024-10-01T06:52:37.226716",
      "exception": false,
-     "start_time": "2024-08-29T01:47:05.172602",
+     "start_time": "2024-10-01T06:52:37.224372",
      "status": "completed"
     },
     "tags": []
@@ -447,20 +367,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "649c16f6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-29T01:47:05.181924Z",
-     "iopub.status.busy": "2024-08-29T01:47:05.181625Z",
-     "iopub.status.idle": "2024-08-29T01:47:09.611526Z",
-     "shell.execute_reply": "2024-08-29T01:47:09.610912Z"
+     "iopub.execute_input": "2024-10-01T06:52:37.232468Z",
+     "iopub.status.busy": "2024-10-01T06:52:37.232179Z",
+     "iopub.status.idle": "2024-10-01T06:52:43.132133Z",
+     "shell.execute_reply": "2024-10-01T06:52:43.131440Z"
     },
     "papermill": {
-     "duration": 4.435689,
-     "end_time": "2024-08-29T01:47:09.613451",
+     "duration": 5.905202,
+     "end_time": "2024-10-01T06:52:43.134069",
      "exception": false,
-     "start_time": "2024-08-29T01:47:05.177762",
+     "start_time": "2024-10-01T06:52:37.228867",
      "status": "completed"
     },
     "tags": []
@@ -501,10 +421,10 @@
    "id": "c1bb8653",
    "metadata": {
     "papermill": {
-     "duration": 0.002786,
-     "end_time": "2024-08-29T01:47:09.619616",
+     "duration": 0.002265,
+     "end_time": "2024-10-01T06:52:43.138889",
      "exception": false,
-     "start_time": "2024-08-29T01:47:09.616830",
+     "start_time": "2024-10-01T06:52:43.136624",
      "status": "completed"
     },
     "tags": []
@@ -533,14 +453,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 907.607441,
-   "end_time": "2024-08-29T01:47:12.242354",
+   "duration": 650.103143,
+   "end_time": "2024-10-01T06:52:45.866068",
    "environment_variables": {},
    "exception": null,
-   "input_path": "05-create_preservation_maps.ipynb",
-   "output_path": "05-create_preservation_maps.ipynb",
+   "input_path": "05-create_preservation_maps_new.ipynb",
+   "output_path": "05-create_preservation_maps_new.ipynb",
    "parameters": {},
-   "start_time": "2024-08-29T01:32:04.634913",
+   "start_time": "2024-10-01T06:41:55.762925",
    "version": "2.4.0"
   }
  },
