--- a/04-create_erosion_distribution.ipynb
+++ b/04-create_erosion_distribution.ipynb
@@ -5,10 +5,10 @@
    "id": "03137675",
    "metadata": {
     "papermill": {
-     "duration": 0.005996,
-     "end_time": "2024-08-29T01:31:55.793973",
+     "duration": 0.006851,
+     "end_time": "2024-10-01T06:39:46.931954",
      "exception": false,
-     "start_time": "2024-08-29T01:31:55.787977",
+     "start_time": "2024-10-01T06:39:46.925103",
      "status": "completed"
     },
     "tags": []
@@ -26,10 +26,10 @@
    "id": "00f399ef",
    "metadata": {
     "papermill": {
-     "duration": 0.004592,
-     "end_time": "2024-08-29T01:31:55.802359",
+     "duration": 0.003551,
+     "end_time": "2024-10-01T06:39:46.940234",
      "exception": false,
-     "start_time": "2024-08-29T01:31:55.797767",
+     "start_time": "2024-10-01T06:39:46.936683",
      "status": "completed"
     },
     "tags": []
@@ -43,44 +43,51 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "15741578",
+   "id": "37e12615",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-29T01:31:55.810154Z",
-     "iopub.status.busy": "2024-08-29T01:31:55.809796Z",
-     "iopub.status.idle": "2024-08-29T01:31:55.817107Z",
-     "shell.execute_reply": "2024-08-29T01:31:55.816433Z"
+     "iopub.execute_input": "2024-10-01T06:39:46.948307Z",
+     "iopub.status.busy": "2024-10-01T06:39:46.947982Z",
+     "iopub.status.idle": "2024-10-01T06:39:47.003754Z",
+     "shell.execute_reply": "2024-10-01T06:39:47.003209Z"
     },
     "papermill": {
-     "duration": 0.012922,
-     "end_time": "2024-08-29T01:31:55.818607",
+     "duration": 0.062133,
+     "end_time": "2024-10-01T06:39:47.005670",
      "exception": false,
-     "start_time": "2024-08-29T01:31:55.805685",
+     "start_time": "2024-10-01T06:39:46.943537",
      "status": "completed"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
+    "from lib.load_params import get_params\n",
+    "\n",
+    "params = get_params(notebook=\"04\")\n",
+    "\n",
     "# If True, use training data extracted in notebook 00c\n",
     "# Else, use pre-prepared training data downloaded from Zenodo\n",
-    "use_extracted_data = True\n",
+    "use_extracted_data = params[\"use_extracted_data\"]\n",
     "\n",
     "# Number of processes to use\n",
-    "n_jobs = 4\n",
+    "n_jobs = params[\"n_jobs\"]\n",
     "\n",
     "# Timespan for analysis\n",
-    "min_time = 0\n",
-    "max_time = 170\n",
+    "min_time = params[\"timespan\"][\"min\"]\n",
+    "max_time = params[\"timespan\"][\"max\"]\n",
     "\n",
     "# Remove outliers before fitting distribution (this value usually works fairly well)\n",
-    "outlier_contamination = 0.06\n",
+    "outlier_contamination = params[\"outlier_contamination\"]\n",
     "\n",
     "# Control randomness by setting random_state to a constant\n",
-    "random_state = 1234\n",
+    "random_state = params[\"random_seed\"]\n",
     "\n",
     "# Control verbosity level of logging output\n",
-    "verbose = False"
+    "verbose = params[\"verbose\"]\n",
+    "\n",
+    "# Output directory\n",
+    "output_dir = params[\"output_dir\"]"
    ]
   },
   {
@@ -88,10 +95,10 @@
    "id": "45979812",
    "metadata": {
     "papermill": {
-     "duration": 0.003547,
-     "end_time": "2024-08-29T01:31:55.824927",
+     "duration": 0.002962,
+     "end_time": "2024-10-01T06:39:47.011561",
      "exception": false,
-     "start_time": "2024-08-29T01:31:55.821380",
+     "start_time": "2024-10-01T06:39:47.008599",
      "status": "completed"
     },
     "tags": []
@@ -106,16 +113,16 @@
    "id": "3dd3ed0e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-29T01:31:55.831774Z",
-     "iopub.status.busy": "2024-08-29T01:31:55.831520Z",
-     "iopub.status.idle": "2024-08-29T01:31:55.942887Z",
-     "shell.execute_reply": "2024-08-29T01:31:55.941586Z"
+     "iopub.execute_input": "2024-10-01T06:39:47.018037Z",
+     "iopub.status.busy": "2024-10-01T06:39:47.017785Z",
+     "iopub.status.idle": "2024-10-01T06:39:47.080426Z",
+     "shell.execute_reply": "2024-10-01T06:39:47.079027Z"
     },
     "papermill": {
-     "duration": 0.117802,
-     "end_time": "2024-08-29T01:31:55.945658",
+     "duration": 0.069793,
+     "end_time": "2024-10-01T06:39:47.084023",
      "exception": false,
-     "start_time": "2024-08-29T01:31:55.827856",
+     "start_time": "2024-10-01T06:39:47.014230",
      "status": "completed"
     },
     "tags": []
@@ -128,8 +135,6 @@
     "    data_dir = \"extracted_data\"\n",
     "else:\n",
     "    data_dir = check_prepared_data(\"prepared_data\", verbose=True)\n",
-    "\n",
-    "output_dir = \"outputs\"\n",
     "\n",
     "dist_name = \"gengamma\"\n",
     "failure = \"raise\"  # or \"ignore\"\n",
@@ -145,10 +150,10 @@
    "id": "6eaaa578",
    "metadata": {
     "papermill": {
-     "duration": 0.005997,
-     "end_time": "2024-08-29T01:31:55.957982",
+     "duration": 0.003735,
+     "end_time": "2024-10-01T06:39:47.093313",
      "exception": false,
-     "start_time": "2024-08-29T01:31:55.951985",
+     "start_time": "2024-10-01T06:39:47.089578",
      "status": "completed"
     },
     "tags": []
@@ -158,46 +163,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "1e5583f9",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-08-29T01:31:55.967179Z",
-     "iopub.status.busy": "2024-08-29T01:31:55.966944Z",
-     "iopub.status.idle": "2024-08-29T01:31:55.971295Z",
-     "shell.execute_reply": "2024-08-29T01:31:55.970555Z"
-    },
-    "papermill": {
-     "duration": 0.011682,
-     "end_time": "2024-08-29T01:31:55.973362",
-     "exception": false,
-     "start_time": "2024-08-29T01:31:55.961680",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "\n",
-    "n_jobs = int(os.environ.get(\"N_JOBS\", n_jobs))\n",
-    "min_time = int(os.environ.get(\"MIN_TIME\", min_time))\n",
-    "max_time = int(os.environ.get(\"MAX_TIME\", max_time))\n",
-    "random_state = int(os.environ.get(\"RANDOM_STATE\", random_state))\n",
-    "outlier_contamination = float(os.environ.get(\"OUTLIER_CONTAMINATION\", outlier_contamination))\n",
-    "verbose = bool(int(os.environ.get(\"VERBOSE\", verbose)))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "9cb4deeb",
    "metadata": {
     "papermill": {
-     "duration": 0.036943,
-     "end_time": "2024-08-29T01:31:56.016450",
+     "duration": 0.002949,
+     "end_time": "2024-10-01T06:39:47.098817",
      "exception": false,
-     "start_time": "2024-08-29T01:31:55.979507",
+     "start_time": "2024-10-01T06:39:47.095868",
      "status": "completed"
     },
     "tags": []
@@ -213,10 +186,10 @@
    "id": "9dad4dab",
    "metadata": {
     "papermill": {
-     "duration": 0.003268,
-     "end_time": "2024-08-29T01:31:56.023484",
+     "duration": 0.002981,
+     "end_time": "2024-10-01T06:39:47.104971",
      "exception": false,
-     "start_time": "2024-08-29T01:31:56.020216",
+     "start_time": "2024-10-01T06:39:47.101990",
      "status": "completed"
     },
     "tags": []
@@ -227,26 +200,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "fb711475",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-29T01:31:56.035843Z",
-     "iopub.status.busy": "2024-08-29T01:31:56.035498Z",
-     "iopub.status.idle": "2024-08-29T01:31:59.876839Z",
-     "shell.execute_reply": "2024-08-29T01:31:59.876302Z"
+     "iopub.execute_input": "2024-10-01T06:39:47.111446Z",
+     "iopub.status.busy": "2024-10-01T06:39:47.111120Z",
+     "iopub.status.idle": "2024-10-01T06:39:51.174133Z",
+     "shell.execute_reply": "2024-10-01T06:39:51.173455Z"
     },
     "papermill": {
-     "duration": 3.849523,
-     "end_time": "2024-08-29T01:31:59.878560",
+     "duration": 4.067935,
+     "end_time": "2024-10-01T06:39:51.175914",
      "exception": false,
-     "start_time": "2024-08-29T01:31:56.029037",
+     "start_time": "2024-10-01T06:39:47.107979",
      "status": "completed"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
+    "import os\n",
     "import warnings\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
@@ -267,10 +241,10 @@
    "id": "e6a8f10c",
    "metadata": {
     "papermill": {
-     "duration": 0.003822,
-     "end_time": "2024-08-29T01:31:59.885589",
+     "duration": 0.002783,
+     "end_time": "2024-10-01T06:39:51.181759",
      "exception": false,
-     "start_time": "2024-08-29T01:31:59.881767",
+     "start_time": "2024-10-01T06:39:51.178976",
      "status": "completed"
     },
     "tags": []
@@ -281,20 +255,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "946bb793",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-29T01:31:59.893844Z",
-     "iopub.status.busy": "2024-08-29T01:31:59.893424Z",
-     "iopub.status.idle": "2024-08-29T01:31:59.897234Z",
-     "shell.execute_reply": "2024-08-29T01:31:59.896727Z"
+     "iopub.execute_input": "2024-10-01T06:39:51.188214Z",
+     "iopub.status.busy": "2024-10-01T06:39:51.187842Z",
+     "iopub.status.idle": "2024-10-01T06:39:51.191471Z",
+     "shell.execute_reply": "2024-10-01T06:39:51.190924Z"
     },
     "papermill": {
-     "duration": 0.010046,
-     "end_time": "2024-08-29T01:31:59.898681",
+     "duration": 0.008663,
+     "end_time": "2024-10-01T06:39:51.193053",
      "exception": false,
-     "start_time": "2024-08-29T01:31:59.888635",
+     "start_time": "2024-10-01T06:39:51.184390",
      "status": "completed"
     },
     "tags": []
@@ -314,10 +288,10 @@
    "id": "6ec2fb1e",
    "metadata": {
     "papermill": {
-     "duration": 0.002805,
-     "end_time": "2024-08-29T01:31:59.904515",
+     "duration": 0.002509,
+     "end_time": "2024-10-01T06:39:51.198125",
      "exception": false,
-     "start_time": "2024-08-29T01:31:59.901710",
+     "start_time": "2024-10-01T06:39:51.195616",
      "status": "completed"
     },
     "tags": []
@@ -330,20 +304,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "4513dafb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-29T01:31:59.911433Z",
-     "iopub.status.busy": "2024-08-29T01:31:59.911166Z",
-     "iopub.status.idle": "2024-08-29T01:32:00.356847Z",
-     "shell.execute_reply": "2024-08-29T01:32:00.356262Z"
+     "iopub.execute_input": "2024-10-01T06:39:51.203816Z",
+     "iopub.status.busy": "2024-10-01T06:39:51.203637Z",
+     "iopub.status.idle": "2024-10-01T06:39:51.559656Z",
+     "shell.execute_reply": "2024-10-01T06:39:51.558927Z"
     },
     "papermill": {
-     "duration": 0.451004,
-     "end_time": "2024-08-29T01:32:00.358387",
+     "duration": 0.360682,
+     "end_time": "2024-10-01T06:39:51.561454",
      "exception": false,
-     "start_time": "2024-08-29T01:31:59.907383",
+     "start_time": "2024-10-01T06:39:51.200772",
      "status": "completed"
     },
     "tags": []
@@ -364,20 +338,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "f5dbf3dd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-29T01:32:00.365430Z",
-     "iopub.status.busy": "2024-08-29T01:32:00.365197Z",
-     "iopub.status.idle": "2024-08-29T01:32:00.534806Z",
-     "shell.execute_reply": "2024-08-29T01:32:00.533612Z"
+     "iopub.execute_input": "2024-10-01T06:39:51.568189Z",
+     "iopub.status.busy": "2024-10-01T06:39:51.567945Z",
+     "iopub.status.idle": "2024-10-01T06:39:51.732300Z",
+     "shell.execute_reply": "2024-10-01T06:39:51.731542Z"
     },
     "papermill": {
-     "duration": 0.175085,
-     "end_time": "2024-08-29T01:32:00.536637",
+     "duration": 0.169668,
+     "end_time": "2024-10-01T06:39:51.734154",
      "exception": false,
-     "start_time": "2024-08-29T01:32:00.361552",
+     "start_time": "2024-10-01T06:39:51.564486",
      "status": "completed"
     },
     "tags": []
@@ -395,20 +369,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "f91767d0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-29T01:32:00.544930Z",
-     "iopub.status.busy": "2024-08-29T01:32:00.544659Z",
-     "iopub.status.idle": "2024-08-29T01:32:00.682110Z",
-     "shell.execute_reply": "2024-08-29T01:32:00.681340Z"
+     "iopub.execute_input": "2024-10-01T06:39:51.741618Z",
+     "iopub.status.busy": "2024-10-01T06:39:51.741314Z",
+     "iopub.status.idle": "2024-10-01T06:39:51.881694Z",
+     "shell.execute_reply": "2024-10-01T06:39:51.880988Z"
     },
     "papermill": {
-     "duration": 0.143021,
-     "end_time": "2024-08-29T01:32:00.683850",
+     "duration": 0.146182,
+     "end_time": "2024-10-01T06:39:51.883445",
      "exception": false,
-     "start_time": "2024-08-29T01:32:00.540829",
+     "start_time": "2024-10-01T06:39:51.737263",
      "status": "completed"
     },
     "tags": []
@@ -450,10 +424,10 @@
    "id": "a184469f",
    "metadata": {
     "papermill": {
-     "duration": 0.003051,
-     "end_time": "2024-08-29T01:32:00.690015",
+     "duration": 0.002634,
+     "end_time": "2024-10-01T06:39:51.889369",
      "exception": false,
-     "start_time": "2024-08-29T01:32:00.686964",
+     "start_time": "2024-10-01T06:39:51.886735",
      "status": "completed"
     },
     "tags": []
@@ -469,10 +443,10 @@
    "id": "614eba8d",
    "metadata": {
     "papermill": {
-     "duration": 0.002702,
-     "end_time": "2024-08-29T01:32:00.695483",
+     "duration": 0.002462,
+     "end_time": "2024-10-01T06:39:51.894294",
      "exception": false,
-     "start_time": "2024-08-29T01:32:00.692781",
+     "start_time": "2024-10-01T06:39:51.891832",
      "status": "completed"
     },
     "tags": []
@@ -483,20 +457,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "c5c1ef39",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-29T01:32:00.702289Z",
-     "iopub.status.busy": "2024-08-29T01:32:00.702045Z",
-     "iopub.status.idle": "2024-08-29T01:32:01.356080Z",
-     "shell.execute_reply": "2024-08-29T01:32:01.355624Z"
+     "iopub.execute_input": "2024-10-01T06:39:51.900705Z",
+     "iopub.status.busy": "2024-10-01T06:39:51.900378Z",
+     "iopub.status.idle": "2024-10-01T06:39:52.610452Z",
+     "shell.execute_reply": "2024-10-01T06:39:52.609430Z"
     },
     "papermill": {
-     "duration": 0.659216,
-     "end_time": "2024-08-29T01:32:01.357488",
+     "duration": 0.716622,
+     "end_time": "2024-10-01T06:39:52.613493",
      "exception": false,
-     "start_time": "2024-08-29T01:32:00.698272",
+     "start_time": "2024-10-01T06:39:51.896871",
      "status": "completed"
     },
     "tags": []
@@ -566,10 +540,10 @@
    "id": "ffc7c250",
    "metadata": {
     "papermill": {
-     "duration": 0.004139,
-     "end_time": "2024-08-29T01:32:01.366343",
+     "duration": 0.003588,
+     "end_time": "2024-10-01T06:39:52.621872",
      "exception": false,
-     "start_time": "2024-08-29T01:32:01.362204",
+     "start_time": "2024-10-01T06:39:52.618284",
      "status": "completed"
     },
     "tags": []
@@ -582,20 +556,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "e1a064e3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-29T01:32:01.374372Z",
-     "iopub.status.busy": "2024-08-29T01:32:01.373903Z",
-     "iopub.status.idle": "2024-08-29T01:32:01.985605Z",
-     "shell.execute_reply": "2024-08-29T01:32:01.985137Z"
+     "iopub.execute_input": "2024-10-01T06:39:52.629781Z",
+     "iopub.status.busy": "2024-10-01T06:39:52.629537Z",
+     "iopub.status.idle": "2024-10-01T06:39:53.178099Z",
+     "shell.execute_reply": "2024-10-01T06:39:53.177347Z"
     },
     "papermill": {
-     "duration": 0.617362,
-     "end_time": "2024-08-29T01:32:01.987129",
+     "duration": 0.554299,
+     "end_time": "2024-10-01T06:39:53.179651",
      "exception": false,
-     "start_time": "2024-08-29T01:32:01.369767",
+     "start_time": "2024-10-01T06:39:52.625352",
      "status": "completed"
     },
     "tags": []
@@ -662,10 +636,10 @@
    "id": "c47d47b6",
    "metadata": {
     "papermill": {
-     "duration": 0.005,
-     "end_time": "2024-08-29T01:32:01.996784",
+     "duration": 0.003849,
+     "end_time": "2024-10-01T06:39:53.187865",
      "exception": false,
-     "start_time": "2024-08-29T01:32:01.991784",
+     "start_time": "2024-10-01T06:39:53.184016",
      "status": "completed"
     },
     "tags": []
@@ -694,14 +668,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 10.18464,
-   "end_time": "2024-08-29T01:32:04.621746",
+   "duration": 10.358329,
+   "end_time": "2024-10-01T06:39:55.810891",
    "environment_variables": {},
    "exception": null,
-   "input_path": "04-create_erosion_distribution.ipynb",
-   "output_path": "04-create_erosion_distribution.ipynb",
+   "input_path": "04-create_erosion_distribution_new.ipynb",
+   "output_path": "04-create_erosion_distribution_new.ipynb",
    "parameters": {},
-   "start_time": "2024-08-29T01:31:54.437106",
+   "start_time": "2024-10-01T06:39:45.452562",
    "version": "2.4.0"
   }
  },
